packages/kit/test/apps/basics/src/routes/errors/page-endpoint/post-explicit/+page.server.js
import { error } from '@sveltejs/kit';

/** @type {import('./$types').Actions} */
export const actions = {
	default: () => {
		throw error(400, 'oops');
	}
};
